crates/docker/tests/snapshots/dockerfile_test__dockerfile__renders_a_custom_template.snap
---
source: crates/docker/tests/dockerfile_test.rs
expression: generate_dockerfile(options).unwrap()
---
# Custom template
FROM scratch
WORKDIR /app
RUN moon run app:compile
CMD moon run app:serve
